# cl-translator

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: utils.cmake
src/: log.cc  log.h  main.cc  sion.h
tests/: project.cc  sion.cc
